#
# configure.in
# 
# This file is part of the Oxford Oberon-2 compiler
# Copyright (c) 2006--2016 J. M. Spivey
# All rights reserved
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions
# are met: 
#
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above
#    copyright notice, this list of conditions and the following
#    disclaimer in the documentation and/or other materials provided
#    with the distribution. 
# 3. The name of the author may not be used to endorse or promote products
#    derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS
# OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
# GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

# Process this file with autoconf to produce a configure script.

AC_INIT(thunder, 0.3, mike@cs.ox.ac.uk)
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR(vm.h)
AC_CONFIG_FILES(Makefile)
AC_CONFIG_HEADERS(config.h)
AC_CANONICAL_HOST

: ${AUTOCONF=autoconf} ${AUTOHEADER=autoheader}
AC_SUBST(AUTOCONF)
AC_SUBST(AUTOHEADER)
AC_SUBST(DEPEND, 1)

AC_ARG_ENABLE(m64x32,
  AS_HELP_STRING([--disable-m64x32], [disable 64-bit runtime for amd64]))

CC='gcc -std=gnu99'
LD=ld

case $host in
  *-*-linux-*)
    AC_DEFINE(LINUX, 1, [Define for Linux]);;

  *-*-mingw*|*-*-cygwin)
    AC_SUBST(WINDOWS, 1)
    AC_DEFINE(WINDOWS, 1, [Define to enable hacks for Windows])
    DIRSEP="\\\\";;

  *-*-darwin*)
    AC_SUBST(MACOS, 1)
    AC_DEFINE(MACOS, 1, [Define to enable hacks for MacOS X]);;
esac    

AC_DEFINE_UNQUOTED(DIRSEP, "$DIRSEP", [Directory separator in file names])

case $host in
  x86_64-*)
    if test "$enable_m64x32" != no; then
      AC_DEFINE(M64X32, 1, [Define for 64-bit runtime with 32-bit pointers])
    fi;;
esac

case $host in
  i686-*|x86_64-*)
    AC_DEFINE(UNALIGNED_MEM, 1, [Define if unaligned loads and stores work]);;
esac

case $host in
  x86_64-*-linux-*)
    if test "$enable_m64x32" = no; then
      CC='gcc -std=gnu99 -m32'; LD='ld -melf_i386'
    fi;;

  x86_64-*-mingw*|*-*-cygwin) 
    WIN=win64
    AC_SUBST(ROOT, C:/msys64)
    AC_SUBST(GTKROOT, C:/msys64/mingw64)
    AC_SUBST(PKG_FLAGS, --define-variable=prefix=C:/msys64/mingw64)
    AC_SUBST(CFLAGS_JIT, [-Wl,--stack,16777216])
    if test "$enable_m64x32" = no; then
      CC='gcc32 -std=gnu99'; LD=ld32
    fi;;
    
  i686-*-mingw*|*-*-cygwin) 
    AC_SUBST(ROOT, C:/msys32)
    AC_SUBST(GTKROOT, C:/msys32/mingw32)
    AC_SUBST(PKG_FLAGS, --define-variable=prefix=C:/msys32/mingw32)
    WIN=win32
    AC_SUBST(CFLAGS_JIT, [-Wl,--stack,4194304]);;
    
  x86_64-*-darwin*)
    if test "$enable_m64x32" = no; then
      CC='gcc -std=gnu99 -m32'
    fi;;
esac

AC_SUBST(LD)

# Checks for programs
AC_PROG_CC
AC_REQUIRE_CPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CHECK_PROGS(DIFF, gdiff diff)
test "$DIFF" != "" || AC_MSG_ERROR(diff not found)

# Disable fancy alias analysis if compiling with gcc
: ${RTFLAGS='${CFLAGS}'}
if test "$GCC" == yes; then
    RTFLAGS="$RTFLAGS -fno-strict-aliasing"
fi
AC_SUBST(RTFLAGS)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_C_INLINE
AC_C_INDEXED_JUMPS
AC_C_UNUSED
AC_C_USED
AC_C_NORETURN
AC_FIND_PAGESIZE

# Checks for header files.
AC_HEADER_STDC

# Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(clock time gettimeofday strtoul stpcpy)
AC_CHECK_FUNCS(mmap sigprocmask) # assume they work OK for our purposes
AC_CHECK_FUNCS(getopt_long_only)

AC_CHECK_LIB(m, sinf, MATHLIB=-lm)
AC_SUBST(MATHLIB)

# PACKAGE OPTIONS

# Option debug
AC_ARG_ENABLE(debug,
  AS_HELP_STRING([--enable-debug], [set up for debugging]),
  if test "$enable_debug" = yes; then 
    DEBUG=1
    AC_DEFINE(DEBUG, 1, [Define to set up for debugging]) 
    : ${MLFLAGS=-g}
  fi)
AC_SUBST(DEBUG)

# Option jit
case $host in
  i?86-*|x86_64-*) 
    VM=vm386.o
    AC_DEFINE(NEED_FPINIT, 1, [Reboot FPU for each primitive]);;
  armv6l-*|armv7l-*|arm-*)
    VM=vmpi.o
    AC_DEFINE(USE_FLUSH, 1, [Whether to flush the cache]);;
esac
AC_SUBST(VM)

# The endgame
AC_OUTPUT
